Update with code-generated api bindings and models performed 2021-06-17
