# splunk_sdk/identity/v2beta1/openapi.yaml
@@ -120,14 +120,6 @@ components:
       required: false
       schema:
         type: string
-    key:
-      description: The API key name.
-      in: path
-      name: key
-      required: true
-      schema:
-        type: string
-      x-case-insensitive: true
     keyId:
       description: Identifier of a public key.
       in: path
@@ -261,7 +253,7 @@ components:
       required: true
       schema:
         maxLength: 36
-        minLength: 4
+        minLength: 2
         type: string
     tenantName:
       description: The tenant name.
@@ -270,7 +262,7 @@ components:
       required: true
       schema:
         maxLength: 36
-        minLength: 4
+        minLength: 2
         type: string
     tenantQuery:
       description: Tenant for the authorization request
@@ -279,7 +271,7 @@ components:
       required: false
       schema:
         maxLength: 36
-        minLength: 4
+        minLength: 2
         type: string
     userCode:
       description: userCode
@@ -296,39 +288,17 @@ components:
       schema:
         enum:
         - v2beta1
-        - v2alpha1
         - v3alpha1
         - v3
         type: string
     version2:
-      description: Service API v2alpha1 and v2beta1.
+      description: Service API v2beta1.
       in: path
       name: version2
       required: true
       schema:
         enum:
-        - v2alpha1
         - v2beta1
-        type: string
-    version2alpha1:
-      description: Service API version 2 alpha 1.
-      in: path
-      name: version2alpha1
-      required: true
-      schema:
-        enum:
-        - v2alpha1
-        type: string
-    version2beta1:
-      description: Service API version 2 beta 1 and higher.
-      in: path
-      name: version2beta1
-      required: true
-      schema:
-        enum:
-        - v2beta1
-        - v3alpha1
-        - v3
         type: string
   schemas:
     AddGroupMemberAsAnAdminBody:
@@ -442,17 +412,6 @@ components:
       - password
       - csrfToken
       type: object
-    ChangeKeyBody:
-      properties:
-        permissions:
-          items:
-            minLength: 4
-            type: string
-            x-case-insensitive: true
-          type: array
-      required:
-      - permissions
-      type: object
     ChangeSubscriptionBody:
       properties:
         appPermissions:
@@ -541,27 +500,6 @@ components:
           type: string
       required:
       - idp
-      type: object
-    CreateKeyBody:
-      properties:
-        expiresAt:
-          format: date-time
-          type: string
-        name:
-          maxLength: 36
-          minLength: 4
-          pattern: ^[_a-z][_.a-z0-9]*$
-          type: string
-        permissions:
-          items:
-            minLength: 4
-            type: string
-            x-case-insensitive: true
-          type: array
-      required:
-      - name
-      - permissions
-      - expiresAt
       type: object
     CreatePrincipalBody:
       description: Payload when creating a principal
@@ -1051,34 +989,6 @@ components:
         tenant:
           type: string
       type: object
-    KeySecret:
-      properties:
-        clientId:
-          type: string
-        createdAt:
-          format: date-time
-          type: string
-        createdBy:
-          type: string
-        expiresAt:
-          format: date-time
-          type: string
-        id:
-          type: string
-        name:
-          type: string
-        permissions:
-          items:
-            type: string
-          type: array
-        rotatedAt:
-          format: date-time
-          type: string
-        tenant:
-          type: string
-        token:
-          type: string
-      type: object
     Member:
       description: Represents a member that belongs to a tenant.
       properties:
@@ -1150,6 +1060,11 @@ components:
     OktaApp:
       description: Represents an Okta App (https://developer.okta.com/docs/reference/api/apps/#application-model)
       type: object
+    OktaAppList:
+      description: Represents a list of Okta Apps
+      items:
+        $ref: '#/components/schemas/OktaApp'
+      type: array
     PermissionSet:
       properties:
         kind:
@@ -1515,6 +1430,10 @@ components:
       type: object
     TenantAsAdmin:
       properties:
+        cells:
+          items:
+            type: string
+          type: array
         createdAt:
           format: date-time
           type: string
@@ -1567,8 +1486,8 @@ components:
       type: object
     TenantName:
       maxLength: 36
-      minLength: 4
-      pattern: ^[a-z][a-z0-9]*$
+      minLength: 2
+      pattern: ^[a-z0-9][a-z0-9\-]*[a-z0-9]$
       type: string
     TenantState:
       enum:
@@ -1621,7 +1540,7 @@ components:
       - title
       - federation_id
       type: object
-    UpdateRoleBody:
+    UpdateRolePermissionsBody:
       properties:
         permissions:
           items:
@@ -1629,6 +1548,16 @@ components:
           type: array
       required:
       - permissions
+      type: object
+    UpdateTenantAsAdminBody:
+      properties:
+        cells:
+          items:
+            maxLength: 50
+            minLength: 1
+            type: string
+          maxItems: 10
+          type: array
       type: object
     UpdateTenantBody:
       properties:
@@ -1708,7 +1637,7 @@ info:
   description: With the Identity service in Splunk Cloud Services, you can authenticate
     and authorize Splunk Cloud Services users.
   title: Identity
-  version: v2beta1.20
+  version: v2beta1.21
 openapi: 3.0.0
 paths:
   /{tenant}/identity/v2beta1/groups:
@@ -2387,6 +2316,8 @@ paths:
           description: The operation isn't authorized.
         "404":
           description: The resource wasn't found.
+        "422":
+          description: Unprocessable entity in request.
         "423":
           description: The resource is locked.
       x-authz-scope: identity.roles.write
@@ -2507,6 +2438,8 @@ paths:
           description: The operation isn't authorized.
         "404":
           description: The resource wasn't found.
+        "422":
+          description: Unprocessable entity in request.
         "423":
           description: The resource is locked.
       x-authz-scope: identity.roles.write
@@ -2778,4 +2711,4 @@ security:
 servers:
 - url: /
 
-# Retrieved from scp-openapi commit 3e10ab186559df6d0a5211cf734514cd53d79779 path: identity/v2beta1/openapi.yaml
+# Retrieved from scp-openapi commit 17cef8cca256319b596db67514c7277b1576baf5 path: identity/v2beta1/openapi.yaml
