# splunk_sdk/identity/v3/__init__.py
@@ -23,7 +23,7 @@
 
     With the Identity service in Splunk Cloud Services, you can authenticate and authorize Splunk Cloud Services users.
 
-    OpenAPI spec version: v3.1 (recommended default)
+    OpenAPI spec version: v3.3 (recommended default)
     Generated by: https://openapi-generator.tech
 """
 
@@ -63,10 +63,14 @@ from splunk_sdk.identity.v3.gen_models import AddGroupMemberBody, \
     PrincipalList, \
     PrincipalPublicKey, \
     PrincipalPublicKeyStatusBody, \
+    ResetPasswordBody, \
     Role, \
     RoleList, \
     RolePermission, \
     RolePermissionList, \
     TenantStatus, \
     Tenant, \
+    UpdateGroupBody, \
+    UpdatePasswordBody, \
+    UpdateRoleBody, \
     ValidateInfo
