# splunk_sdk/identity/v3/gen_identity_api.py
@@ -21,7 +21,7 @@
 
     With the Identity service in Splunk Cloud Services, you can authenticate and authorize Splunk Cloud Services users.
 
-    OpenAPI spec version: v3.1 (recommended default)
+    OpenAPI spec version: v3.3 (recommended default)
     Generated by: https://openapi-generator.tech
 """
 
@@ -57,17 +57,21 @@ from splunk_sdk.identity.v3.gen_models import Principal
 from splunk_sdk.identity.v3.gen_models import PrincipalList
 from splunk_sdk.identity.v3.gen_models import PrincipalPublicKey
 from splunk_sdk.identity.v3.gen_models import PrincipalPublicKeyStatusBody
+from splunk_sdk.identity.v3.gen_models import ResetPasswordBody
 from splunk_sdk.identity.v3.gen_models import Role
 from splunk_sdk.identity.v3.gen_models import RoleList
 from splunk_sdk.identity.v3.gen_models import RolePermission
 from splunk_sdk.identity.v3.gen_models import RolePermissionList
+from splunk_sdk.identity.v3.gen_models import UpdateGroupBody
+from splunk_sdk.identity.v3.gen_models import UpdatePasswordBody
+from splunk_sdk.identity.v3.gen_models import UpdateRoleBody
 from splunk_sdk.identity.v3.gen_models import ValidateInfo
 
 
 class Identity(BaseService):
     """
     Identity
-    Version: v3.1
+    Version: v3.3
     With the Identity service in Splunk Cloud Services, you can authenticate and authorize Splunk Cloud Services users.
     """
 
@@ -783,6 +787,22 @@ class Identity(BaseService):
         response = self.base_client.delete(url, params=query_params)
         return handle_response(response, )
 
+    def reset_password(self, reset_password_body: ResetPasswordBody, query_params: Dict[str, object] = None) -> SSCVoidModel:
+        """
+        Sends an email which allows a principal to reset a forgotten password.
+        """
+        if query_params is None:
+            query_params = {}
+
+        path_params = {
+        }
+
+        path = Template("/system/identity/v3/reset-password").substitute(path_params)
+        url = self.base_client.build_url(path)
+        data = reset_password_body.to_dict()
+        response = self.base_client.post(url, json=data, params=query_params)
+        return handle_response(response, )
+
     def revoke_principal_auth_tokens(self, principal: str, query_params: Dict[str, object] = None) -> SSCVoidModel:
         """
         Revoke all existing access tokens issued to a principal. Principals can reset their password by visiting https://login.splunk.com/en_us/page/lost_password
@@ -799,6 +819,23 @@ class Identity(BaseService):
         url = self.base_client.build_url(path)
         response = self.base_client.post(url, params=query_params)
         return handle_response(response, )
+
+    def update_group(self, group: str, update_group_body: UpdateGroupBody, query_params: Dict[str, object] = None) -> Group:
+        """
+        Updates a group&#39;s display name or description.
+        """
+        if query_params is None:
+            query_params = {}
+
+        path_params = {
+            "group": group,
+        }
+
+        path = Template("/identity/v3/groups/${group}").substitute(path_params)
+        url = self.base_client.build_url(path)
+        data = update_group_body.to_dict()
+        response = self.base_client.patch(url, json=data, params=query_params)
+        return handle_response(response, Group)
 
     def update_identity_provider(self, idp: str, identity_provider_config_body: IdentityProviderConfigBody, query_params: Dict[str, object] = None) -> IdentityProviderBody:
         """
@@ -817,6 +854,23 @@ class Identity(BaseService):
         response = self.base_client.put(url, json=data, params=query_params)
         return handle_response(response, IdentityProviderBody)
 
+    def update_password(self, principal: str, update_password_body: UpdatePasswordBody, query_params: Dict[str, object] = None) -> SSCVoidModel:
+        """
+        Update principal password
+        """
+        if query_params is None:
+            query_params = {}
+
+        path_params = {
+            "principal": principal,
+        }
+
+        path = Template("/system/identity/v3/principals/${principal}/password").substitute(path_params)
+        url = self.base_client.build_url(path)
+        data = update_password_body.to_dict()
+        response = self.base_client.patch(url, json=data, params=query_params)
+        return handle_response(response, )
+
     def update_principal_public_key(self, principal: str, key_id: str, principal_public_key_status_body: PrincipalPublicKeyStatusBody, query_params: Dict[str, object] = None) -> PrincipalPublicKey:
         """
         Update principal public key
@@ -834,6 +888,23 @@ class Identity(BaseService):
         data = principal_public_key_status_body.to_dict()
         response = self.base_client.put(url, json=data, params=query_params)
         return handle_response(response, PrincipalPublicKey)
+
+    def update_role(self, role: str, update_role_body: UpdateRoleBody, query_params: Dict[str, object] = None) -> Role:
+        """
+        Update a role&#39;s display name or description for a given tenant.
+        """
+        if query_params is None:
+            query_params = {}
+
+        path_params = {
+            "role": role,
+        }
+
+        path = Template("/identity/v3/roles/${role}").substitute(path_params)
+        url = self.base_client.build_url(path)
+        data = update_role_body.to_dict()
+        response = self.base_client.patch(url, json=data, params=query_params)
+        return handle_response(response, Role)
 
     def validate_token(self, include: List[str] = None, query_params: Dict[str, object] = None) -> ValidateInfo:
         """
