# splunk_sdk/identity/v3alpha1/__init__.py
@@ -23,7 +23,7 @@
 
     With the Identity service in Splunk Cloud Services, you can authenticate and authorize Splunk Cloud Services users.
 
-    OpenAPI spec version: v3alpha1.1 
+    OpenAPI spec version: v3alpha1.3 
     Generated by: https://openapi-generator.tech
 """
 
