# splunk_sdk/identity/v3alpha1/gen_identity_api.py
@@ -21,7 +21,7 @@
 
     With the Identity service in Splunk Cloud Services, you can authenticate and authorize Splunk Cloud Services users.
 
-    OpenAPI spec version: v3alpha1.1 
+    OpenAPI spec version: v3alpha1.3 
     Generated by: https://openapi-generator.tech
 """
 
@@ -68,7 +68,7 @@ from splunk_sdk.identity.v3alpha1.gen_models import ValidateInfo
 class Identity(BaseService):
     """
     Identity
-    Version: v3alpha1.1
+    Version: v3alpha1.3
     With the Identity service in Splunk Cloud Services, you can authenticate and authorize Splunk Cloud Services users.
     """
 
