# splunk_sdk/identity/v3alpha1/gen_models.py
@@ -19,7 +19,7 @@
 
     With the Identity service in Splunk Cloud Services, you can authenticate and authorize Splunk Cloud Services users.
 
-    OpenAPI spec version: v3alpha1.1 
+    OpenAPI spec version: v3alpha1.3 
     Generated by: https://openapi-generator.tech
 """
 
